tests/fixtures/invalid/none_sub_none.py
# Cannot subtract None and None
x: None = None - None
